# libqmi

./: .gitignore  .gitlab-ci.yml  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  RELEASING  TODO  autogen.sh  configure.ac  gtk-doc.make  meson.build  meson_options.txt  meson_post_install.py  qmidb.py  qmitest.c
cli/: Makefile.am  mbimcli-basic-connect.c  mbimcli-phonebook.c  mbimcli.c  mbimcli.h  qmicli-ctl.c  qmicli-dms.c  qmicli-helpers.c  qmicli-helpers.h  qmicli-nas.c  qmicli-pbm.c  qmicli-uim.c  qmicli-wds.c  qmicli.c  qmicli.h
cli/test/: Makefile.am
data/: Makefile.am  mbim-service-atds.json  mbim-service-auth.json  mbim-service-basic-connect-extensions.json  mbim-service-basic-connect.json  mbim-service-compal.json  mbim-service-dss.json  mbim-service-fibocom.json  mbim-service-google.json  mbim-service-intel-firmware-update-v2.json  mbim-service-intel-firmware-update.json  mbim-service-intel-mutual-authentication.json  mbim-service-intel-thermal-rf.json  mbim-service-intel-tools.json  mbim-service-ms-basic-connect-extensions-v2.json  mbim-service-ms-basic-connect-extensions-v3.json  mbim-service-ms-basic-connect-extensions.json  mbim-service-ms-basic-connect-v2.json  mbim-service-ms-basic-connect-v3.json  mbim-service-ms-firmware-id.json  mbim-service-ms-host-shutdown.json  mbim-service-ms-sar.json  mbim-service-ms-uicc-low-level-access.json  mbim-service-ms-voice-extensions.json  mbim-service-phonebook.json  mbim-service-proxy-control.json  mbim-service-qdu.json  mbim-service-qmi.json  mbim-service-quectel.json  mbim-service-sms.json  mbim-service-stk.json  mbim-service-ussd.json  qmi-collection-basic.json  qmi-collection-minimal.json  qmi-common.json  qmi-service-atr.json  qmi-service-ctl.json  qmi-service-dms.json  qmi-service-dpm.json  qmi-service-dsd.json  (+21 more)
data/pkg-config/: Makefile.am  qmi-glib.pc.in  qrtr-glib.pc.in
docs/man/: Makefile.am  meson.build
libmbim-glib/: Makefile.am  libmbim-glib.h  mbim-cid.c  mbim-cid.h  mbim-device.c  mbim-device.h  mbim-enums.h  mbim-errors.h  mbim-message-basic-connect.c  mbim-message-basic-connect.h  mbim-message-private.h  mbim-message.c  mbim-message.h  mbim-utils.c  mbim-utils.h  mbim-uuid.c  mbim-uuid.h  mbim-version.h.in
libmbim-glib/test/: Makefile.am  test-message-builder.c  test-message-command-builder.c  test-message-contents.c  test-message-parser.c  test-message.c
libqmi-glib/: Makefile.am  libqmi-glib.h  qmi-client.c  qmi-client.h  qmi-device.c  qmi-device.h  qmi-enum-types-static.c  qmi-enum-types-static.h  qmi-enums-dms.h  qmi-enums-nas.h  qmi-enums-pbm.h  qmi-enums-pds.h  qmi-enums-private.h  qmi-enums-uim.h  qmi-enums-wds.h  qmi-enums-wms.h  qmi-enums.h  qmi-errors.h  qmi-flags64-dms.h  qmi-flags64-nas.h  qmi-message.c  qmi-message.h  qmi-utils.c  qmi-utils.h
libqmi-glib/test/: Makefile.am  test-message.c  test-utils.c
src/: Makefile.am  libqmi-glib.h  meson.build  qmi-client-ctl.c  qmi-client-ctl.h  qmi-client-dms.c  qmi-client-dms.h  qmi-client-wds.c  qmi-client-wds.h  qmi-client.c  qmi-client.h  qmi-ctl.h  qmi-device.c  qmi-device.h  qmi-dms.h  qmi-enums-dms.h  qmi-enums-wds.h  qmi-enums.h  qmi-errors.h  qmi-message-ctl.c  qmi-message-ctl.h  qmi-message-dms.c  qmi-message-dms.h  qmi-message-wds.c  qmi-message-wds.h  qmi-message.c  qmi-message.h  qmi-utils.c  qmi-utils.h  qmi-wds.h  qmimsg.c  qmimsg.h
src/common/: Makefile.am  mbim-common.c  mbim-common.h  meson.build  qmi-common.c  qmi-common.h
src/libmbim-glib/: 76-mbim-device-ownership.rules.in  Makefile.am  libmbim-glib.h  mbim-cid.c  mbim-cid.h  mbim-compat.c  mbim-compat.h  mbim-device.c  mbim-device.h  mbim-enums.h  mbim-errors.h  mbim-helpers-netlink.c  mbim-helpers-netlink.h  mbim-helpers.c  mbim-helpers.h  mbim-message-private.h  mbim-message.c  mbim-message.h  mbim-net-port-manager-wdm.c  mbim-net-port-manager-wdm.h  mbim-net-port-manager-wwan.c  mbim-net-port-manager-wwan.h  mbim-net-port-manager.c  mbim-net-port-manager.h  mbim-proxy-helpers.c  mbim-proxy-helpers.h  mbim-proxy.c  mbim-proxy.h  mbim-tlv-private.h  mbim-tlv.c  mbim-tlv.h  mbim-utils.c  mbim-utils.h  mbim-uuid.c  mbim-uuid.h  mbim-version.h.in  meson.build  symbol.map
src/libqmi-glib/: #qmi-device.c#  .#qmi-device.c  76-qmi-device-group.rules.in  76-qmi-device-ownership.rules.in  Makefile.am  libqmi-glib.h  meson.build  qmi-client.c  qmi-client.h  qmi-compat.c  qmi-compat.h  qmi-device.c  qmi-device.h  qmi-endpoint-mbim.c  qmi-endpoint-mbim.h  qmi-endpoint-qmux.c  qmi-endpoint-qmux.h  qmi-endpoint-qrtr.c  qmi-endpoint-qrtr.h  qmi-endpoint.c  qmi-endpoint.h  qmi-enums-dms.c  qmi-enums-dms.h  qmi-enums-dsd.h  qmi-enums-fox.h  qmi-enums-gas.h  qmi-enums-ims.h  qmi-enums-imsa.h  qmi-enums-imsdcm.h  qmi-enums-imsp.h  qmi-enums-loc.h  qmi-enums-nas.c  qmi-enums-nas.h  qmi-enums-oma.h  qmi-enums-pbm.h  qmi-enums-pdc.h  qmi-enums-pds.h  qmi-enums-private.h  qmi-enums-qos.h  qmi-enums-sar.h  (+40 more)
src/libqrtr-glib/: Makefile.am  libqrtr-glib.h  qrtr-bus.c  qrtr-bus.h  qrtr-client.c  qrtr-client.h  qrtr-control-socket.c  qrtr-control-socket.h  qrtr-node.c  qrtr-node.h  qrtr-utils.c  qrtr-utils.h  qrtr-version.h.in
src/mbim-proxy/: 76-mbim-proxy-device-ownership.rules.in  Makefile.am  mbim-proxy.c  meson.build
src/mbimcli/: Makefile.am  mbimcli  mbimcli-atds.c  mbimcli-basic-connect-extensions.c  mbimcli-basic-connect.c  mbimcli-compal.c  mbimcli-completion  mbimcli-dss.c  mbimcli-fibocom.c  mbimcli-google.c  mbimcli-helpers.c  mbimcli-helpers.h  mbimcli-intel-firmware-update.c  mbimcli-intel-mutual-authentication.c  mbimcli-intel-thermal-rf.c  mbimcli-intel-tools.c  mbimcli-link-management.c  mbimcli-ms-basic-connect-extensions.c  mbimcli-ms-firmware-id.c  mbimcli-ms-host-shutdown.c  mbimcli-ms-sar.c  mbimcli-ms-uicc-low-level-access.c  mbimcli-ms-voice-extensions.c  mbimcli-phonebook.c  mbimcli-quectel.c  mbimcli-sms.c  mbimcli.c  mbimcli.h  meson.build
src/qmi-firmware-update/: Makefile.am  meson.build  qfu-at-device.c  qfu-at-device.h  qfu-log.c  (+43 more)
utils/: Makefile.am  mbim-network  mbim-network.in  meson.build  qmi-network  qmi-network.in  qmitest.c  swi-update.c
(+210 files in other folders)
